--- a/src/main/resources/templates/ajax/userInput.html
+++ b/src/main/resources/templates/ajax/userInput.html
@@ -9,7 +9,7 @@
 
 	<label>이름 : </label> <input type="text" id="nameInput"><br>
 	<label>생년월일 : </label><input type="text" id="birthdayInput"><br>
-	<label>이메일 : </label><input type="text" id="emailInput"><br>
+	<label>이메일 : </label><input type="text" id="emailInput"><br> <button type="button">중복확인</button>
 	<label>자기소개</label><br>
 	<textarea cols="50" rows="7" id="introduceInput"></textarea> <br>
 	<button type="button" id="addBtn">추가</button>
